src/App.css
:root {
  --bg-color-light: #333333;
  --text-color-light: #f2f2f2;
  --bg-color-dark: #777777;
  --text-color-dark: #333333;
}

/* Common styles for both themes */
@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Lato', sans-serif;
}

.home,
.account,
.admin,
.ads,
.login,
.signup,
.logout {
  display: flex;
  height: 90vh;
  align-items: center;
  justify-content: center;
  font-size: 3rem;
  background-color: var(--bg-color-dark);
  color: var(--text-color-dark);

}

/* Navbar CSS */
.navbar {
  background-color: var(--bg-color-light);
  color: var(--text-color-light);
  /* Set text color based on theme */
  height: 80px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.menu-bars {
  margin-left: 2rem;
  font-size: 2rem;
  background: none;
  color: var(--text-color-light);
}

.menu-bars:hover {
  color: #555;
}

.nav-menu {
  background-color: var(--bg-color-light);
  color: var(--text-color-light);
  width: 250px;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  position: fixed;
  top: 0;
  left: -100%;
  transition: 850ms;
  font-size: 2rem;
}

.nav-menu.active {
  left: 0;
  transition: 450ms;
}

.nav-text {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 8px 0px 8px 16px;
  list-style: none;
  height: 60px;
  color: var(--text-color-dark);
}

.nav-text a {
  text-decoration: none;
  color: var(--text-color-light);
  font-size: 18px;
  width: 95%;
  height: 100%;
  display: flex;
  align-items: center;
  padding: 0 16px;
  border-radius: 4px;
  font-size: 2rem;
}

.nav-text a:hover {
  background-color: var(--bg-color-dark);
  color: var(--text-color-dark);
}

.nav-menu-items {
  width: 100%;
  font-size: inherit;
}

.navbar-toggle {
  background-color: var(--bg-color-light);
  width: 100%;
  height: 80px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

span {
  margin-left: 16px;
}

.toggle-switch {
  display: flex;
  align-items: center;
}

.auth-icons {
  display: flex;
  align-items: center;
  margin-left: auto;
  margin-right: 20px;
}

.auth-icon,
.toggle-switch {
  font-size: 2rem;
  /* color: #000; */
  margin-left: 20px;
  text-decoration: none;
  color: var(--text-color-light);
}

.auth-icon:hover {
  color: #555;
}

.toggle-switch input[type="checkbox"] {
  display: none;
}

.toggle-switch label {
  display: inline-block;
  width: 30px;
  height: 20px;
  background-color: var(--bg-color-dark);
  border-radius: 10px;
  position: relative;
  cursor: pointer;
}

.toggle-switch label:before {
  content: '';
  position: absolute;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #fff;
  top: 50%;
  transform: translateY(-50%);
  transition: 0.3s;
}

.toggle-switch input[type="checkbox"]:checked+label {
  background-color: #ccc;
}

.toggle-switch input[type="checkbox"]:checked+label:before {
  background-color: #fff;
  left: calc(100% - 16px);
}

/* Login CSS */

.login-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-color: var(--bg-color-dark);
  /* Maintain the page's background color */
}

.login-card {
  background-color: var(--bg-color-dark);
  /* Changed background color */
  color: var(--text-color-light);
  /* Changed text color */
  border-radius: 15px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  padding: 20px;
}

form {
  display: flex;
  flex-direction: column;
}

.form-group {
  margin-bottom: 20px;
}

label {
  margin-bottom: 5px;
  display: block;
}

input {
  padding: 10px;
  border-radius: 5px;
  border: 1px solid #ccc;
}

button {
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  background-color: var(--bg-color-dark);
  color: var(--text-color-light);
  cursor: pointer;
  transition: background-color 0.3s ease;
}

button:hover {
  background-color: #555;
}

/* Signup CSS */

.signup-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-color: var(--bg-color-dark);
}

.signup-card {
  background-color: var(--bg-color-dark);
  /* Changed background color */
  color: var(--text-color-light);
  /* Changed text color */
  border-radius: 15px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  padding: 20px;
}

.signup-card h1 {
  text-align: center;
  margin-bottom: 20px;
}

.form-group {
  margin-bottom: 20px;
}

label {
  display: block;
  margin-bottom: 5px;
}

input {
  width: 100%;
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 5px;
}

button {
  width: 100%;
  padding: 10px;
  background-color: var(--bg-color-light);
  /* Changed background color */
  color: var(--text-color-dark);
  /* Changed text color */
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

button:hover {
  background-color: var(--bg-color-light);
  /* Changed background color */
  color: var(--text-color-dark);
  /* Changed text color */
}

